--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,12 @@
     <title>Headlines</title>
 </head>
     <body>
+    <form>
+        <input type="text" name="publication" placeholder="search" />
+        <input type="submit" value="Submit" />
 
-        <h1>Headlines</h1>
+    </form>
+    <br>
         {% for article in articles %}
             <b><a href="{{ article.link }}"> {{ article.title }}</a></b><br />
             <i>{{ article.published }}</i><br />
